objects/TW1_Extrato__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Caixa__c</fullName>
        <label>Caixa</label>
        <referenceTo>TW1_Caixa__c</referenceTo>
        <relationshipName>Estratos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ValorAbertura</fullName>
                    <label>Valor de Abertura</label>
                </value>
                <value>
                    <fullName>ValorBrinde</fullName>
                    <label>Valor do Brinde</label>
                </value>
                <value>
                    <fullName>ValorFechamento</fullName>
                    <label>Valor do Fechamento</label>
                </value>
                <value>
                    <fullName>ValorEstorno</fullName>
                    <label>Valor Estorno</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Extrato</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Caixa__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TW1_Data__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TW1_Tipo__c</columns>
        <columns>TW1_Valor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>ValorBrinde</value>
        </filters>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>All_ADM</fullName>
        <columns>NAME</columns>
        <columns>TW1_Caixa__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TW1_Data__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TW1_Tipo__c</columns>
        <columns>TW1_Valor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>ValorBrinde</value>
        </filters>
        <label>Tudo ADM</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número do Estrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>